[package]
name = "yoteoke"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_egui = "0.33.0"
serde = "1.0.216"
serde_json = "1.0.133"
kira = { version = "0.10.4", features = ["symphonia"] }
regex = "1.11.1"
ffmpeg-cli = "0.1.0"
bevy-tokio-tasks = "0.15.0"
directories = "5.0"
bevy_image_export = "0.12.0"
normalize-line-endings = "0.3.0"
bevy_file_dialog = { git = "https://github.com/eupraxia05/bevy_file_dialog.git" }
image = "0.25.5"
sadness-generator = "0.6.0"
crash-handler = "0.6.2"
minidump-writer = "0.8.9"
minidumper-child = "0.2.2"
minidump = "0.25.0"
egui_commonmark = { version = "0.20.0", features = ["macros"] }
bevy-inspector-egui = "0.30.0"
winit = "0.30.5"
egui-toast = "0.17.0"

[build-dependencies]
winresource = "0.1.20"
